Changements gallery.css

--- a/galerie.html
+++ b/galerie.html
@@ -7,7 +7,7 @@
     <title>INRS - Galerie</title>
   </head>
   <body>
-    <a href="index.html"><img id="logo" src="media/inrs.png" alt="inrs" style="float:left;"></a>    
+    <a href="index.html"><img id="logo" src="media/inrs.png" alt="inrs" style="float:left;"></a>
     <div id="menu">
       <!--Partie 1 - Sommaire-->
       <nav class="menu-nav">
@@ -63,7 +63,7 @@
         <audio controls>
           <source src="media/Sputnik_beep.ogg" type="audio/ogg">
           <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-            un <a href="media/Sputnik_beep.ogg">lien vers le fichier audio</a> pour le télécharger.
+             <a href="media/Sputnik_beep.ogg">lien vers le fichier audio</a> pour le télécharger.
           </p>
         </audio>
         <div id="textsound1">
